# PEHaskell

./: PEHaskell.cabal  PEHaskell.prof  README.md  hie.yaml  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/0347ca31/: cabal_macros.h
.stack-work/ghci/09d1c899/: cabal_macros.h
.stack-work/ghci/1a776b5b/: cabal_macros.h
.stack-work/ghci/1e63379b/: cabal_macros.h
.stack-work/ghci/2e9262f3/: cabal_macros.h
.stack-work/ghci/47e5747e/: cabal_macros.h
.stack-work/ghci/4eb53298/: cabal_macros.h
.stack-work/ghci/51e671cb/: cabal_macros.h
.stack-work/ghci/5bd19eba/: cabal_macros.h
.stack-work/ghci/614965f4/: cabal_macros.h
.stack-work/ghci/788bcb49/: cabal_macros.h
.stack-work/ghci/7c0d0880/: cabal_macros.h
.stack-work/ghci/8d30662d/: cabal_macros.h
.stack-work/ghci/915d62ae/: cabal_macros.h
.stack-work/ghci/96ccbc7f/: cabal_macros.h
.stack-work/ghci/a024c688/: cabal_macros.h
.stack-work/ghci/abc17e1a/: cabal_macros.h
.stack-work/ghci/ae0ddeda/: cabal_macros.h
.stack-work/ghci/b72518f4/: cabal_macros.h
.stack-work/ghci/bc9797d5/: cabal_macros.h
.stack-work/ghci/bd51d4b7/: cabal_macros.h
.stack-work/ghci/c8ef0e90/: cabal_macros.h
.stack-work/ghci/d1a27a8a/: cabal_macros.h
.stack-work/install/x86_64-linux-tinfo6/1e684f2fbb7ec52d138ddd9a373b845af7cf9b392602ab63abdf6898c3203f19/8.10.4/doc/PEHaskell-0.1.0.0/: LICENSE
.stack-work/install/x86_64-linux-tinfo6/1e684f2fbb7ec52d138ddd9a373b845af7cf9b392602ab63abdf6898c3203f19/8.10.4/lib/x86_64-linux-ghc-8.10.4/PEHaskell-0.1.0.0-2LDZ4EaRoFxHN2lUPscq9Z/: EulerMath.dyn_hi  EulerMath.hi  EulerMath.p_hi  EulerUtil.hi  EulerUtil.p_hi  Problems.dyn_hi  Problems.hi  Problems.p_hi
.stack-work/install/x86_64-linux-tinfo6/1e684f2fbb7ec52d138ddd9a373b845af7cf9b392602ab63abdf6898c3203f19/8.10.4/lib/x86_64-linux-ghc-8.10.4/PEHaskell-0.1.0.0-8pck6UDeyYH8lKK8ZVN1oE/: EulerMath.dyn_hi  EulerMath.p_hi  EulerUtil.p_hi  Problems.dyn_hi  Problems.hi  Problems.p_hi
.stack-work/install/x86_64-linux-tinfo6/1e684f2fbb7ec52d138ddd9a373b845af7cf9b392602ab63abdf6898c3203f19/8.10.4/pkgdb/: PEHaskell-0.1.0.0-Eue2zcSF8lXBcceKElFokZ.conf  package.cache
.stack-work/install/x86_64-linux-tinfo6/4338404e0ec3209f7ac98f6b506724723883f5052af2332a2b48cba0aba2f236/8.10.4/pkgdb/: PEHaskell-0.1.0.0-JjU8A807DKhKX3KVHYdXiD.conf  PEHaskell-0.1.0.0-LKzwbc9Q4VqHgAwHkj9Lx6.conf  package.cache
.stack-work/install/x86_64-linux-tinfo6/6c3ee2454757cfae6b135589e31de766475a4c49e6094857d3a8a2abc4da88f5/8.10.4/lib/x86_64-linux-ghc-8.10.4/: stpRhHW1
.stack-work/install/x86_64-linux-tinfo6/6c3ee2454757cfae6b135589e31de766475a4c49e6094857d3a8a2abc4da88f5/8.10.4/pkgdb/: PEHaskell-0.1.0.0-2nQuGlsfc93CTCf2q8ZuY2.conf  PEHaskell-0.1.0.0-7Wvlsw5UhQXFNI8TAlGiMu.conf  package.cache
.stack-work/install/x86_64-linux-tinfo6/e867d77db1dab9a72bb69ffc1a0aa6d1013a554d9db0ac6aa98be5627a894f6d/8.10.4/pkgdb/: PEHaskell-0.1.0.0-2LDZ4EaRoFxHN2lUPscq9Z.conf  PEHaskell-0.1.0.0-8pck6UDeyYH8lKK8ZVN1oE.conf  package.cache
bench/: Bench.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
main/: Main.hs
src/: EulerMath.hs  EulerUtil.hs  Problems.hs
src/Problems/: P001.hs  P002.hs  P003.hs  P004.hs  P005.hs  P006.hs  P007.hs  P008.hs  P009.hs  P010.hs  P011.hs  P012.hs  P013.hs  P014.hs  P015.hs  P016.hs  P017.hs  P018.hs  P019.hs  P020.hs  P021.hs  P022.hs  P023.hs  P024.hs  P025.hs  P026.hs  P027.hs  P028.hs  P029.hs  P030.hs  P031.hs  P032.hs  P033.hs  P034.hs  P035.hs  P036.hs  P037.hs  P038.hs  P039.hs  P040.hs  (+59 more)
(+2012 files in other folders)
