name:                PEHaskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/peterjayandrew/PEHaskell#readme
license:             BSD3
license-file:        LICENSE
author:              Peter Andrew
maintainer:          peterjayandrew@gmail.com
copyright:           2021 Peter Andrew
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     EulerMath
                     , Problems
                     , EulerUtil
  other-modules:       Problems.P001, Problems.P002, Problems.P003, Problems.P004, Problems.P005
                     , Problems.P006, Problems.P007, Problems.P008, Problems.P009, Problems.P010
                     , Problems.P011, Problems.P012, Problems.P013, Problems.P014, Problems.P015
                     , Problems.P016, Problems.P017, Problems.P018, Problems.P019, Problems.P020
                     , Problems.P021, Problems.P022, Problems.P023, Problems.P024, Problems.P025
                     , Problems.P026, Problems.P027, Problems.P028, Problems.P029, Problems.P030
                     , Problems.P031, Problems.P032, Problems.P033, Problems.P034, Problems.P035
                     , Problems.P036, Problems.P037, Problems.P038, Problems.P039, Problems.P040
                     , Problems.P041, Problems.P042, Problems.P043, Problems.P044, Problems.P045
                     , Problems.P046, Problems.P047, Problems.P048, Problems.P049, Problems.P050
                     , Problems.P051, Problems.P052, Problems.P053, Problems.P054, Problems.P055
                     , Problems.P056, Problems.P057, Problems.P058, Problems.P059, Problems.P060
                     , Problems.P061, Problems.P062, Problems.P063, Problems.P064, Problems.P065
                     , Problems.P066, Problems.P067, Problems.P068, Problems.P069, Problems.P070
                     , Problems.P071, Problems.P072, Problems.P073, Problems.P074, Problems.P075
                     , Problems.P076, Problems.P077, Problems.P078, Problems.P079, Problems.P080
                     , Problems.P081, Problems.P082, Problems.P083, Problems.P084, Problems.P085
                     , Problems.P086, Problems.P087, Problems.P088, Problems.P089, Problems.P090
                     , Problems.P091, Problems.P092, Problems.P093, Problems.P094, Problems.P095
                     , Problems.P096, Problems.P097, Problems.P098, Problems.P099
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.6.4.1
                     , split >= 0.2.3.4
                     , vector >= 0.12.3.0
                     , mtl >= 2.2.2
                     , array >= 0.5.4.0
  default-language:    Haskell2010

executable PEHaskell
  hs-source-dirs:      main
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , PEHaskell
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

benchmark PEHaskell-bench
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  -- other-modules:
  --    Paths_PEHaskell
  hs-source-dirs:
      bench
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      PEHaskell
    , base >=4.7 && <5
    , criterion >= 1.5.9.0
    , deepseq >= 1.4.5.0
    , split >= 0.2.3.4
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/peterjayandrew/PEHaskell
